2014-03-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix localization failure of error text in tx_srfeuserregister_setfixed
	* Resolves #51953: Subpart ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### missing in HTML template

2014-03-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #56790: Remove dependency on extension div2007
	* Updated manual
	* Fix PHP warning in tx_srfeuserregister_select_dmcategories
	* Missing doNotEnforceUsername in static template
	* Fix incorrect behaviour when using email as username
	* Resolves #51959: Markers visible in administrator notification after edit

2014-02-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix flexfom structure and flexform value retrieval

2014-02-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #43925: Site crashes (500) if security token is clicked after more than 30 days
	* Resolves #50838: Non existing token crashes site
	* Resolves #54034: typo ("rewiew") in locallang.xml
	* Requires TYPO3 4.5+
	* Resolves #51950: Deprecation Message t3lib_htmlmail->t3lib_htmlmail()
	* Follow-up to #50838: Non existing token crashes site
	* Initialize $GLOBALS['TCA']['fe_users']['feInterface'] when not set (TYPO3 6.2)
	* Remove usage of tx_div2007_alpha_language_base
	* Require php 5.3+ and enable in TYPO3 6.2
	* Fix usage of methods deprecated in TYPO3 6.2
	* Remove usage of tx_div2007_alpha::loadTcaAdditions_fh001
	* Remove usage of tx_div2007_alpha::userProcess_fh001	
	* Remove usage of tx_div2007_alpha::getSetupOrFFvalue_fh002
	* Remove tx_srfeuserregister_hooks_cms.php

2013-08-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission (Thanks to Roland Schenke)

2013-08-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix text in static template constants
	* Fix issue #50934: Security Ticket #2013011810000038

2013-07-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert fix issue #39429: usergroups outside pid not saved in edit / invite mode
