@@ -25,9 +25,9 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => 'fe_users',
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
-	'author' => 'Stanislas Rolland / Franz Holzinger',
-	'author_email' => 'franz@ttproducts.de',
-	'author_company' => 'jambage.com',
+	'author' => 'Stanislas Rolland',
+	'author_email' => 'typo3@sjbr.ca',
+	'author_company' => 'SJBR',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
 	'version' => '3.0.1',
@@ -36,7 +36,6 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'php' => '5.3.0-0.0.0',
 			'typo3' => '4.5.0-6.2.99',
-			'cms' => '',
 			'felogin' => '',
 			'rsaauth' => '',
 			'saltedpasswords' => '',
