@@ -1,3 +1,6 @@
+2014-03-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Update manual
+
 2014-03-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix localization failure of error text in tx_srfeuserregister_setfixed
 	* Resolves #51953: Subpart ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### missing in HTML template
